objects/Test_Execution_Steps__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Result__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Actual Result</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expected_Result__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Expected Result</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Input_Data__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Input Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Step_Order__c</fullName>
        <label>Step Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test_Execution_Name__c</fullName>
        <label>Test Execution Name</label>
        <referenceTo>Test_Execution__c</referenceTo>
        <relationshipLabel>Test Execution Steps</relationshipLabel>
        <relationshipName>Test_Execution_Steps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>User_Login_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>User Login Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Test Execution Steps</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Execution Steps Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Execution Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>